# default_python_repo

./: README.md  pyproject.toml  settings.json  setup.sh
.claude/: settings.json
.vscode./: settings.json
docs/: project_architecture.md  testing_workflow.md
experiments/: setup_experiment.sh  test_config.sh
