[project]
name = "default-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.64.0",
    "datasets>=4.0.0",
    "ipython>=9.4.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "pandas>=2.3.2",
    "pip>=25.2",
    "python-dotenv>=1.0.0",
]
