[project]
name = "default-repo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "anthropic>=0.80.0",
    "datasets>=4.0.0",
    "inspect-ai==0.3.184",
    "inspect-scout==0.4.15",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.5",
    "numpy>=2.4.0",
    "openai>=2.17.0",
    "pandas>=2.3.2",
    "pip>=25.2",
    "python-dotenv>=1.0.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "torch>=2.10.0",
    "transformers>=5.2.0",
]
